# quickython

./: .editorconfig  .gitignore  .pre-commit-config.yaml  BEST_PRACTICES_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-29-modernize-quickython-uv-stack.md
docs/superpowers/specs/: 2026-06-29-modernize-quickython-uv-stack-design.md
src/quickython/: __init__.py  __main__.py  example.py  sample.py
tests/: test_cli.py  test_example.py  test_hypothesis_example.py  test_sample.py
