[tool.poetry]
name = "quickython"
version = "0.1.0"
description = "Python quick start project template"
authors = ["Peter Mezensky <peter.mezensky@kroger.com>"]
readme = "README.md"
packages = [{include = "quickython", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
ruff = "^0.9.5"
pytest = "^9.0.2"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
pytest-timeout = "^2.3.1"
pytest-mock = "^3.15.0"
hypothesis = "^6.135.0"
interrogate = "^1.7.0"
vulture = "^2.14"
build = "^1.2.2"
twine = "^6.0.1"
pre-commit = "^4.0.1"
pip-audit = "^2.7.3"
commitizen = "^4.4.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "D",   # pydocstyle (docstrings)
    "DTZ", # flake8-datetimez
    "ERA", # eradicate (commented-out code)
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "RUF", # Ruff-specific rules
]
# Ignore rules that are too strict for quick-start template or conflict with formatter
ignore = [
    "S101",  # Use of assert detected (common in tests)
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line (conflicts with D212)
    "PLR0913", # Too many arguments to function call
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=quickython",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
    "--timeout=60",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = true
ignore-nested-functions = true
fail-under = 80
exclude = ["tests", "docs", ".venv"]
verbose = 2
color = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "src/quickython/__init__.py:__version__"
]
tag_format = "v$version"
update_changelog_on_bump = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
